Sugati/src/objects/Communication_Preference__c.object
<CustomObject>
    <fields>
        <fullName>CP_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communication Preferences</relationshipLabel>
        <relationshipName>Communication_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CP_City__c</fullName>
        <label>Town/City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communication Preferences</relationshipLabel>
        <relationshipName>Communication_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CP_Opt_in__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CP_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Street_3__c</fullName>
        <label>Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push Notification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Communication Preference</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Communication Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>